# spbstu-wallet

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  conanfile.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-android-workflow.yml  build-backend-workflow.yml  cpp-test.yml  cpp-test.yml.deprecated  doxygen-docs.yml  tests-backend.yml
backend/: CMakeLists.txt  main.cpp
backend/database/: CMakeLists.txt
backend/database/base/: CMakeLists.txt  base_database.cpp  base_database.h
backend/database/interface/: CMakeLists.txt  i_database.cpp
backend/database/mock/: CMakeLists.txt  mock_database.h
backend/database/postgres/: CMakeLists.txt  psql_database.cpp  psql_database.h
backend/database/sqlite/: CMakeLists.txt  sqlite_database.cpp  sqlite_database.h
backend/receipt/: CMakeLists.txt
backend/receipt/data/: CMakeLists.txt
backend/receipt/database/: CMakeLists.txt  receipt_database.cpp  receipt_database.h
backend/receipt/ofd/: CMakeLists.txt
backend/receipt/ofd/http/: CMakeLists.txt  http_ofd.cpp  http_ofd.h
backend/receipt/ofd/http/tests/: CMakeLists.txt  ofd_test.cpp
backend/receipt/processor/: CMakeLists.txt  receipt_processor.cpp  receipt_processor.h
backend/service/: CMakeLists.txt  service.cpp  service.h
backend/service/tests/: CMakeLists.txt  service_test.cpp
cmake/: compiler_flags.cmake  conan_install.cmake  gitmodules.cmake  utils.cmake  vcpkg_android.cmake
docker/android-dev/: Dockerfile
docker/backend-dev/: Dockerfile  Dockerfile.building  Dockerfile.tests
docs/ofd/: README.md  ofd_out.json
docs/service/: db.sql
overlay-ports/spdlog/: portfile.cmake  usage  vcpkg.json
proto/: CMakeLists.txt  test.proto
proto/database/: CMakeLists.txt  database.proto
proto/helloworld/: CMakeLists.txt
proto/testdir/: CMakeLists.txt  pp.proto
proto/wallet/: CMakeLists.txt  service.proto
proto/wallet/receipt/: CMakeLists.txt  item.proto  receipt.proto
scripts/: adb-install.sh  install.sh  style.sh
scripts/pre-commit/: clang-format-check.sh  end-newline.sh  pre-commit
utils/: CMakeLists.txt
utils/config/: CMakeLists.txt  config.cpp  config.h
utils/config/interfaces/: CMakeLists.txt  i_config.cpp  i_config.h
utils/database/: CMakeLists.txt  database.h
utils/database/base/: CMakeLists.txt  base_database.cpp  base_database.h
utils/database/interface/: CMakeLists.txt  i_database.cpp  i_database.h
utils/database/interfaces/: CMakeLists.txt  i_database.cpp  i_database.h
utils/database/mock/: CMakeLists.txt  mock_database.h  mock_transaction.h
utils/database/postgres/: CMakeLists.txt  psql_database.cpp  psql_database.h  psql_transaction.cpp  psql_transaction.h
utils/database/sqlite/: CMakeLists.txt  sqlite_database.cpp  sqlite_database.h  sqlite_transaction.cpp  sqlite_transaction.h
utils/database/tests/: CMakeLists.txt  common_test.cpp
utils/database/transaction/: CMakeLists.txt
utils/foo/: CMakeLists.txt  foo.cpp  foo.h
utils/foo/tests/: CMakeLists.txt  foo_int_test.cpp  (+1 more)
utils/singleton/: CMakeLists.txt  singleton.h
utils/string/: CMakeLists.txt  trim.cpp  trim.h
wallet/: CMakeLists.txt  main.cpp
(+41 files in other folders)
